MFC r317428 (cognet): fix arm64 MSI

In arm_gicv2m_alloc_msi(), if we found a suitable irq range, leave the loop
before we increase irq again, or we'd end up choosing an irq, and then
really using the next one, even if it's not available.
Also in the inner loop, correct the end check so that we check every irq,
even the last one.
This makes the msk(4) adapter able to use MSI on Softiron Overdrive 1000.

PR:		219956
Approved by:	re (gjb)

Former-commit-id: f173bb29277e4177b09705f27b7a6108ea75d00a